answers/src/main/java/org/example/InterviewModel/InterviewModelCorrection/InterviewModelCorrectionParser.java
// Generated from C:/Users/gonca/IdeaProjects/answers/src/main/java/org/example/InterviewModel/InterviewModelCorrection.g4 by ANTLR 4.13.1
package org.example.InterviewModel.InterviewModelCorrection;
 // classes to include
import java.lang.*;
import java.util.TreeMap;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class InterviewModelCorrectionParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, COTACAO=14, WS=15, SPACE=16, INT=17, 
		NUMBER=18, TEXT=19, CHAR=20, NEWLINE=21, PONTO=22, INTERROGACAO=23, LETTER=24, 
		ESCOLHA=25, QUESTIONANSWER=26;
	public static final int
		RULE_cabecalhoSection = 0, RULE_question = 1, RULE_answerSection = 2, 
		RULE_cabecalho = 3, RULE_introduction = 4, RULE_multipleChoice = 5, RULE_shortAnswerQuestion = 6, 
		RULE_trueOrFalseQuestion = 7, RULE_valueQuestion = 8, RULE_dateQuestion = 9, 
		RULE_timeQuestion = 10, RULE_scaleQuestion = 11, RULE_questionBase = 12, 
		RULE_choices = 13, RULE_choice = 14, RULE_questionAnswer = 15, RULE_answerCotation = 16, 
		RULE_questionNumber = 17;
	private static String[] makeRuleNames() {
		return new String[] {
			"cabecalhoSection", "question", "answerSection", "cabecalho", "introduction", 
			"multipleChoice", "shortAnswerQuestion", "trueOrFalseQuestion", "valueQuestion", 
			"dateQuestion", "timeQuestion", "scaleQuestion", "questionBase", "choices", 
			"choice", "questionAnswer", "answerCotation", "questionNumber"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'Questionario'", "'Solucoes'", "':'", "'Introducao'", "'[Escolha multipla] '", 
			"'Resposta:'", "'[Responda de forma breve] Questao'", "'[V/F] Questao '", 
			"'[Valor Inteiro/Decimal] Questao '", "'[Data] Questao '", "'[Tempo] Questao '", 
			"'[Intervalo] Questao '", "'Questao'", null, null, null, null, null, 
			null, null, "'\\n'", "'.'", "'?'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "COTACAO", "WS", "SPACE", "INT", "NUMBER", "TEXT", "CHAR", 
			"NEWLINE", "PONTO", "INTERROGACAO", "LETTER", "ESCOLHA", "QUESTIONANSWER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "InterviewModelCorrection.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	public	TreeMap<String, String> answers = new TreeMap<>();

	public InterviewModelCorrectionParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CabecalhoSectionContext extends ParserRuleContext {
		public IntroductionContext introduction() {
			return getRuleContext(IntroductionContext.class,0);
		}
		public QuestionContext question() {
			return getRuleContext(QuestionContext.class,0);
		}
		public AnswerSectionContext answerSection() {
			return getRuleContext(AnswerSectionContext.class,0);
		}
		public List<CabecalhoContext> cabecalho() {
			return getRuleContexts(CabecalhoContext.class);
		}
		public CabecalhoContext cabecalho(int i) {
			return getRuleContext(CabecalhoContext.class,i);
		}
		public TerminalNode WS() { return getToken(InterviewModelCorrectionParser.WS, 0); }
		public TerminalNode NEWLINE() { return getToken(InterviewModelCorrectionParser.NEWLINE, 0); }
		public CabecalhoSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cabecalhoSection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelCorrectionListener ) ((InterviewModelCorrectionListener)listener).enterCabecalhoSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelCorrectionListener ) ((InterviewModelCorrectionListener)listener).exitCabecalhoSection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InterviewModelCorrectionVisitor ) return ((InterviewModelCorrectionVisitor<? extends T>)visitor).visitCabecalhoSection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CabecalhoSectionContext cabecalhoSection() throws RecognitionException {
		CabecalhoSectionContext _localctx = new CabecalhoSectionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_cabecalhoSection);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(37); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(36);
				cabecalho();
				}
				}
				setState(39); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==TEXT );
			setState(42);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(41);
				match(WS);
				}
			}

			setState(44);
			introduction();
			setState(45);
			match(T__0);
			setState(47);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(46);
				match(NEWLINE);
				}
				break;
			}
			setState(49);
			question();
			setState(50);
			match(T__1);
			setState(51);
			answerSection();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QuestionContext extends ParserRuleContext {
		public List<MultipleChoiceContext> multipleChoice() {
			return getRuleContexts(MultipleChoiceContext.class);
		}
		public MultipleChoiceContext multipleChoice(int i) {
			return getRuleContext(MultipleChoiceContext.class,i);
		}
		public List<ShortAnswerQuestionContext> shortAnswerQuestion() {
			return getRuleContexts(ShortAnswerQuestionContext.class);
		}
		public ShortAnswerQuestionContext shortAnswerQuestion(int i) {
			return getRuleContext(ShortAnswerQuestionContext.class,i);
		}
		public List<TrueOrFalseQuestionContext> trueOrFalseQuestion() {
			return getRuleContexts(TrueOrFalseQuestionContext.class);
		}
		public TrueOrFalseQuestionContext trueOrFalseQuestion(int i) {
			return getRuleContext(TrueOrFalseQuestionContext.class,i);
		}
		public List<ValueQuestionContext> valueQuestion() {
			return getRuleContexts(ValueQuestionContext.class);
		}
		public ValueQuestionContext valueQuestion(int i) {
			return getRuleContext(ValueQuestionContext.class,i);
		}
		public List<TimeQuestionContext> timeQuestion() {
			return getRuleContexts(TimeQuestionContext.class);
		}
		public TimeQuestionContext timeQuestion(int i) {
			return getRuleContext(TimeQuestionContext.class,i);
		}
		public List<DateQuestionContext> dateQuestion() {
			return getRuleContexts(DateQuestionContext.class);
		}
		public DateQuestionContext dateQuestion(int i) {
			return getRuleContext(DateQuestionContext.class,i);
		}
		public List<ScaleQuestionContext> scaleQuestion() {
			return getRuleContexts(ScaleQuestionContext.class);
		}
		public ScaleQuestionContext scaleQuestion(int i) {
			return getRuleContext(ScaleQuestionContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(InterviewModelCorrectionParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(InterviewModelCorrectionParser.NEWLINE, i);
		}
		public QuestionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_question; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelCorrectionListener ) ((InterviewModelCorrectionListener)listener).enterQuestion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelCorrectionListener ) ((InterviewModelCorrectionListener)listener).exitQuestion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InterviewModelCorrectionVisitor ) return ((InterviewModelCorrectionVisitor<? extends T>)visitor).visitQuestion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QuestionContext question() throws RecognitionException {
		QuestionContext _localctx = new QuestionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_question);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(61);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__4:
					{
					setState(53);
					multipleChoice();
					}
					break;
				case T__6:
					{
					setState(54);
					shortAnswerQuestion();
					}
					break;
				case T__7:
					{
					setState(55);
					trueOrFalseQuestion();
					}
					break;
				case T__8:
					{
					setState(56);
					valueQuestion();
					}
					break;
				case T__10:
					{
					setState(57);
					timeQuestion();
					}
					break;
				case T__9:
					{
					setState(58);
					dateQuestion();
					}
					break;
				case T__11:
					{
					setState(59);
					scaleQuestion();
					}
					break;
				case NEWLINE:
					{
					setState(60);
					match(NEWLINE);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(63); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 2105248L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AnswerSectionContext extends ParserRuleContext {
		public List<QuestionAnswerContext> questionAnswer() {
			return getRuleContexts(QuestionAnswerContext.class);
		}
		public QuestionAnswerContext questionAnswer(int i) {
			return getRuleContext(QuestionAnswerContext.class,i);
		}
		public List<TerminalNode> WS() { return getTokens(InterviewModelCorrectionParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(InterviewModelCorrectionParser.WS, i);
		}
		public AnswerSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_answerSection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelCorrectionListener ) ((InterviewModelCorrectionListener)listener).enterAnswerSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelCorrectionListener ) ((InterviewModelCorrectionListener)listener).exitAnswerSection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InterviewModelCorrectionVisitor ) return ((InterviewModelCorrectionVisitor<? extends T>)visitor).visitAnswerSection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AnswerSectionContext answerSection() throws RecognitionException {
		AnswerSectionContext _localctx = new AnswerSectionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_answerSection);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(67);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__12:
					{
					setState(65);
					questionAnswer();
					}
					break;
				case WS:
					{
					setState(66);
					match(WS);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(69); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__12 || _la==WS );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CabecalhoContext extends ParserRuleContext {
		public List<TerminalNode> TEXT() { return getTokens(InterviewModelCorrectionParser.TEXT); }
		public TerminalNode TEXT(int i) {
			return getToken(InterviewModelCorrectionParser.TEXT, i);
		}
		public TerminalNode WS() { return getToken(InterviewModelCorrectionParser.WS, 0); }
		public TerminalNode NEWLINE() { return getToken(InterviewModelCorrectionParser.NEWLINE, 0); }
		public CabecalhoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cabecalho; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelCorrectionListener ) ((InterviewModelCorrectionListener)listener).enterCabecalho(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelCorrectionListener ) ((InterviewModelCorrectionListener)listener).exitCabecalho(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InterviewModelCorrectionVisitor ) return ((InterviewModelCorrectionVisitor<? extends T>)visitor).visitCabecalho(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CabecalhoContext cabecalho() throws RecognitionException {
		CabecalhoContext _localctx = new CabecalhoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_cabecalho);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(72); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(71);
				match(TEXT);
				}
				}
				setState(74); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==TEXT );
			setState(76);
			match(T__2);
			setState(78);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(77);
				match(WS);
				}
				break;
			}
			setState(83);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(80);
					match(TEXT);
					}
					} 
				}
				setState(85);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			}
			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NEWLINE) {
				{
				setState(86);
				match(NEWLINE);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IntroductionContext extends ParserRuleContext {
		public List<TerminalNode> PONTO() { return getTokens(InterviewModelCorrectionParser.PONTO); }
		public TerminalNode PONTO(int i) {
			return getToken(InterviewModelCorrectionParser.PONTO, i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(InterviewModelCorrectionParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(InterviewModelCorrectionParser.NEWLINE, i);
		}
		public List<TerminalNode> TEXT() { return getTokens(InterviewModelCorrectionParser.TEXT); }
		public TerminalNode TEXT(int i) {
			return getToken(InterviewModelCorrectionParser.TEXT, i);
		}
		public IntroductionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_introduction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelCorrectionListener ) ((InterviewModelCorrectionListener)listener).enterIntroduction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelCorrectionListener ) ((InterviewModelCorrectionListener)listener).exitIntroduction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InterviewModelCorrectionVisitor ) return ((InterviewModelCorrectionVisitor<? extends T>)visitor).visitIntroduction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IntroductionContext introduction() throws RecognitionException {
		IntroductionContext _localctx = new IntroductionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_introduction);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			match(T__3);
			setState(103); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(96); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						setState(96);
						_errHandler.sync(this);
						switch (_input.LA(1)) {
						case TEXT:
							{
							setState(91); 
							_errHandler.sync(this);
							_alt = 1;
							do {
								switch (_alt) {
								case 1:
									{
									{
									setState(90);
									match(TEXT);
									}
									}
									break;
								default:
									throw new NoViableAltException(this);
								}
								setState(93); 
								_errHandler.sync(this);
								_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
							} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
							}
							break;
						case PONTO:
							{
							setState(95);
							match(PONTO);
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(98); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==NEWLINE) {
					{
					setState(100);
					match(NEWLINE);
					}
				}

				}
				}
				setState(105); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==TEXT || _la==PONTO );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MultipleChoiceContext extends ParserRuleContext {
		public String questionText;
		public String answer;
		public Token t;
		public Token a;
		public QuestionBaseContext questionBase() {
			return getRuleContext(QuestionBaseContext.class,0);
		}
		public ChoicesContext choices() {
			return getRuleContext(ChoicesContext.class,0);
		}
		public List<TerminalNode> TEXT() { return getTokens(InterviewModelCorrectionParser.TEXT); }
		public TerminalNode TEXT(int i) {
			return getToken(InterviewModelCorrectionParser.TEXT, i);
		}
		public MultipleChoiceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multipleChoice; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelCorrectionListener ) ((InterviewModelCorrectionListener)listener).enterMultipleChoice(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelCorrectionListener ) ((InterviewModelCorrectionListener)listener).exitMultipleChoice(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InterviewModelCorrectionVisitor ) return ((InterviewModelCorrectionVisitor<? extends T>)visitor).visitMultipleChoice(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MultipleChoiceContext multipleChoice() throws RecognitionException {
		MultipleChoiceContext _localctx = new MultipleChoiceContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_multipleChoice);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			((MultipleChoiceContext)_localctx).t = match(T__4);
			setState(108);
			questionBase();
			setState(109);
			choices();
			setState(110);
			match(T__5);
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TEXT) {
				{
				{
				setState(111);
				((MultipleChoiceContext)_localctx).a = match(TEXT);
				}
				}
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}

			((MultipleChoiceContext)_localctx).questionText = _localctx.questionText+((MultipleChoiceContext)_localctx).t.getText();
			((MultipleChoiceContext)_localctx).answer =  (((MultipleChoiceContext)_localctx).a != null) ? ((MultipleChoiceContext)_localctx).a.getText():"No answer provided";
			answers.put(_localctx.questionText, _localctx.answer);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ShortAnswerQuestionContext extends ParserRuleContext {
		public String questionText;
		public String answer;
		public Token t;
		public Token n;
		public Token q;
		public Token a;
		public TerminalNode NUMBER() { return getToken(InterviewModelCorrectionParser.NUMBER, 0); }
		public TerminalNode PONTO() { return getToken(InterviewModelCorrectionParser.PONTO, 0); }
		public TerminalNode INTERROGACAO() { return getToken(InterviewModelCorrectionParser.INTERROGACAO, 0); }
		public List<TerminalNode> WS() { return getTokens(InterviewModelCorrectionParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(InterviewModelCorrectionParser.WS, i);
		}
		public List<TerminalNode> TEXT() { return getTokens(InterviewModelCorrectionParser.TEXT); }
		public TerminalNode TEXT(int i) {
			return getToken(InterviewModelCorrectionParser.TEXT, i);
		}
		public ShortAnswerQuestionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_shortAnswerQuestion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelCorrectionListener ) ((InterviewModelCorrectionListener)listener).enterShortAnswerQuestion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InterviewModelCorrectionListener ) ((InterviewModelCorrectionListener)listener).exitShortAnswerQuestion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof InterviewModelCorrectionVisitor ) return ((InterviewModelCorrectionVisitor<? extends T>)visitor).visitShortAnswerQuestion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ShortAnswerQuestionContext shortAnswerQuestion() throws RecognitionException {
		ShortAnswerQuestionContext _localctx = new ShortAnswerQuestionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_shortAnswerQuestion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			((ShortAnswerQuestionContext)_localctx).t = match(T__6);
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(120);
				match(WS);
				}
			}

			setState(123);
			((ShortAnswerQuestionContext)_localctx).n = match(NUMBER);
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(124);
				match(WS);
				}
			}

			setState(128); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(127);
				((ShortAnswerQuestionContext)_localctx).q = match(TEXT);
				}
				}
				setState(130); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==TEXT );
			setState(132);
			_la = _input.LA(1);
			if ( !(_la==PONTO || _la==INTERROGACAO) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(134);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(133);
				match(WS);
				}
			}

			setState(136);
			match(T__5);
			setState(138);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(137);
				match(WS);
				}
			}

			setState(143);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TEXT) {
				{
				{
				setState(140);
				((ShortAnswerQuestionContext)_localctx).a = match(TEXT);
				}
				}
				setState(145);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}

			        ((ShortAnswerQuestionContext)_localctx).questionText =  ((ShortAnswerQuestionContext)_localctx).t.getText() + " " + ((ShortAnswerQuestionContext)_localctx).n.getText() + ": ";
			        ((ShortAnswerQuestionContext)_localctx).answer =  (((ShortAnswerQuestionContext)_localctx).a != null) ? ((ShortAnswerQuestionContext)_localctx).a.getText():"No answer provided";
			        answers.put(_localctx.questionText, _localctx.answer);
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
